fix: 星のアイコンgap追加

--- a/src/app/components/ShopCard/index.module.css
+++ b/src/app/components/ShopCard/index.module.css
@@ -90,12 +90,12 @@
 .review {
   display: flex;
   margin-left: auto;
+  gap: 3px;
 }
 
 .review_icon {
   width: 19px;
   height: 19px;
-  margin-right: 3px;
 }
 
 .train_review {
