--- a/src/app/components/ShopDetail/index.module.css
+++ b/src/app/components/ShopDetail/index.module.css
@@ -160,6 +160,7 @@
   display: flex;
   justify-content: center;
   margin-top: 1px;
+  gap: 10px;
 }
 
 .edit_trash_btn {
