--- a/src/app/components/inputmodal/index.module.css
+++ b/src/app/components/inputmodal/index.module.css
@@ -51,7 +51,7 @@
 }
 
 .modal_text p {
-  font-size: 1.99vw;
+  font-size: 2.5vw;
   font-weight: 400;
   color: #3f3f3f;
 }
